# pico_light_cube

./: README.md
firmware/: CMakeLists.txt  addr_led_driver.c  addr_led_driver.h  addr_led_manager.c  addr_led_manager.h  animation_canvas.c  animation_canvas.h  animation_manager.c  animation_manager.h  animation_scroller.c  animation_scroller.h  animation_sparkles.c  animation_sparkles.h  button.c  color.c  color.h  editable_value.c  editable_value.h  mic.c  mic.h  test.c  usr_commands.c  usr_commands.h  usr_input.c  visual_util.c  visual_util.h
firmware/colorspace-conversions/: CMakeLists.txt  README.txt  colorspace-conversions.c  colorspace.h  colorspace_body.c  colorspace_constructors.c
firmware/colorspace-conversions/test/: color.c  color.h  colorspace_test  test_colorspace.c
firmware/misc/: CMakeLists.txt
firmware/tools/: embedded_ali.png.c  embedded_biberyuzlum.png.c  pattern_to_bitmap.py
firmware/tools/video_test/: ffmpeg_cmd.sh  image_handler.py
hardware/: BOM_PCB_pico_light_cube_lengthwork_2023-05-18.csv
hardware/pico_light_cube/: pico_light_cube.kicad_pcb  pico_light_cube.kicad_prl  pico_light_cube.kicad_pro  pico_light_cube.kicad_sch
tools/audio_assistant/: audio_assistant.py
tools/light_cube_assistant/: light_cube_assistant.html  light_cube_assistant.js  serial_man.js  serialtest.html
